--- a/requirements.txt
+++ b/requirements.txt
@@ -1,229 +1,206 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=main
-_openmp_mutex=5.1=1_gnu
-absl-py=2.1.0=pypi_0
-aiofiles=23.2.1=pypi_0
-altair=5.5.0=pypi_0
-annotated-types=0.7.0=pypi_0
-anyascii=0.3.2=pypi_0
-anyio=4.8.0=pypi_0
-asttokens=3.0.0=pypi_0
-attrs=25.1.0=pypi_0
-audioread=3.0.1=pypi_0
-av=14.1.0=pypi_0
-babel=2.17.0=pypi_0
-boto3=1.36.20=pypi_0
-botocore=1.36.20=pypi_0
-bzip2=1.0.8=h5eee18b_6
-ca-certificates=2024.12.31=h06a4308_0
-cached-path=1.6.7=pypi_0
-cachetools=5.5.1=pypi_0
-certifi=2025.1.31=pypi_0
-cffi=1.17.1=pypi_0
-charset-normalizer=3.4.1=pypi_0
-click=8.1.8=pypi_0
-cn2an=0.5.22=pypi_0
-coloredlogs=15.0.1=pypi_0
-comm=0.2.2=pypi_0
-contourpy=1.2.1=pypi_0
-ctranslate2=4.5.0=pypi_0
-cycler=0.12.1=pypi_0
-cython=3.0.12=pypi_0
-dateparser=1.1.8=pypi_0
-debugpy=1.8.12=pypi_0
-decorator=5.1.1=pypi_0
-deprecated=1.2.18=pypi_0
-distance=0.1.3=pypi_0
-distro=1.9.0=pypi_0
-docopt=0.6.2=pypi_0
-dtw-python=1.4.4=pypi_0
-eng-to-ipa=0.0.2=pypi_0
-exceptiongroup=1.2.2=pypi_0
-executing=2.2.0=pypi_0
-fastapi=0.115.8=pypi_0
-faster-whisper=1.1.1=pypi_0
-ffmpy=0.5.0=pypi_0
-filelock=3.17.0=pypi_0
-flatbuffers=25.2.10=pypi_0
-fonttools=4.56.0=pypi_0
-fsspec=2025.2.0=pypi_0
-fugashi=1.3.0=pypi_0
-g2p-en=2.1.0=pypi_0
-g2pkk=0.1.2=pypi_0
-google-api-core=2.24.1=pypi_0
-google-auth=2.38.0=pypi_0
-google-cloud-core=2.4.1=pypi_0
-google-cloud-storage=2.19.0=pypi_0
-google-crc32c=1.6.0=pypi_0
-google-resumable-media=2.7.2=pypi_0
-googleapis-common-protos=1.67.0=pypi_0
-gradio=3.48.0=pypi_0
-gradio-client=0.6.1=pypi_0
-grpcio=1.70.0=pypi_0
-gruut=2.2.3=pypi_0
-gruut-ipa=0.13.0=pypi_0
-gruut-lang-de=2.0.1=pypi_0
-gruut-lang-en=2.0.1=pypi_0
-gruut-lang-es=2.0.1=pypi_0
-gruut-lang-fr=2.0.2=pypi_0
-h11=0.14.0=pypi_0
-httpcore=1.0.7=pypi_0
-httpx=0.28.1=pypi_0
-huggingface-hub=0.17.3=pypi_0
-humanfriendly=10.0=pypi_0
-idna=3.10=pypi_0
-importlib-resources=6.5.2=pypi_0
-inflect=7.0.0=pypi_0
-ipykernel=6.29.5=pypi_0
-ipython=8.32.0=pypi_0
-jaconv=0.4.0=pypi_0
-jamo=0.4.1=pypi_0
-jedi=0.19.2=pypi_0
-jieba=0.42.1=pypi_0
-jinja2=3.1.5=pypi_0
-jiter=0.8.2=pypi_0
-jmespath=1.0.1=pypi_0
-joblib=1.4.2=pypi_0
-jsonlines=1.2.0=pypi_0
-jsonschema=4.23.0=pypi_0
-jsonschema-specifications=2024.10.1=pypi_0
-jupyter-client=8.6.3=pypi_0
-jupyter-core=5.7.2=pypi_0
-kiwisolver=1.4.8=pypi_0
-langid=1.1.6=pypi_0
-ld_impl_linux-64=2.40=h12ee557_0
-libffi=3.4.4=h6a678d5_1
-libgcc-ng=11.2.0=h1234567_1
-libgomp=11.2.0=h1234567_1
-librosa=0.9.1=pypi_0
-libstdcxx-ng=11.2.0=h1234567_1
-libuuid=1.41.5=h5eee18b_0
-llvmlite=0.43.0=pypi_0
-loguru=0.7.2=pypi_0
-markdown=3.7=pypi_0
-markdown-it-py=3.0.0=pypi_0
-markupsafe=2.1.5=pypi_0
-matplotlib=3.8.4=pypi_0
-matplotlib-inline=0.1.7=pypi_0
-mdurl=0.1.2=pypi_0
-mecab-python3=1.0.9=pypi_0
-melotts=0.1.2=pypi_0
-more-itertools=10.6.0=pypi_0
-mpmath=1.3.0=pypi_0
-myshell-openvoice=0.0.0=dev_0
-narwhals=1.26.0=pypi_0
-ncurses=6.4=h6a678d5_0
-nest-asyncio=1.6.0=pypi_0
-networkx=2.8.8=pypi_0
-nltk=3.9.1=pypi_0
-num2words=0.5.12=pypi_0
-numba=0.60.0=pypi_0
-numpy=1.22.0=pypi_0
-nvidia-cublas-cu12=12.4.5.8=pypi_0
-nvidia-cuda-cupti-cu12=12.4.127=pypi_0
-nvidia-cuda-nvrtc-cu12=12.4.127=pypi_0
-nvidia-cuda-runtime-cu12=12.4.127=pypi_0
-nvidia-cudnn-cu12=9.1.0.70=pypi_0
-nvidia-cufft-cu12=11.2.1.3=pypi_0
-nvidia-curand-cu12=10.3.5.147=pypi_0
-nvidia-cusolver-cu12=11.6.1.9=pypi_0
-nvidia-cusparse-cu12=12.3.1.170=pypi_0
-nvidia-cusparselt-cu12=0.6.2=pypi_0
-nvidia-nccl-cu12=2.21.5=pypi_0
-nvidia-nvjitlink-cu12=12.4.127=pypi_0
-nvidia-nvtx-cu12=12.4.127=pypi_0
-onnxruntime=1.20.1=pypi_0
-openai=1.63.0=pypi_0
-openai-whisper=20240930=pypi_0
-openssl=3.0.15=h5eee18b_0
-orjson=3.10.15=pypi_0
-packaging=24.2=pypi_0
-pandas=2.0.3=pypi_0
-parso=0.8.4=pypi_0
-pexpect=4.9.0=pypi_0
-pillow=10.4.0=pypi_0
-pip=25.0=py310h06a4308_0
-plac=1.4.3=pypi_0
-platformdirs=4.3.6=pypi_0
-pooch=1.8.2=pypi_0
-proces=0.1.7=pypi_0
-prompt-toolkit=3.0.50=pypi_0
-proto-plus=1.26.0=pypi_0
-protobuf=5.29.3=pypi_0
-psutil=7.0.0=pypi_0
-ptyprocess=0.7.0=pypi_0
-pure-eval=0.2.3=pypi_0
-pyasn1=0.6.1=pypi_0
-pyasn1-modules=0.4.1=pypi_0
-pyaudio=0.2.14=pypi_0
-pycparser=2.22=pypi_0
-pydantic=2.10.6=pypi_0
-pydantic-core=2.27.2=pypi_0
-pydub=0.25.1=pypi_0
-pygments=2.19.1=pypi_0
-pykakasi=2.2.1=pypi_0
-pyparsing=3.2.1=pypi_0
-pypinyin=0.50.0=pypi_0
-python=3.10.16=he870216_1
-python-crfsuite=0.9.11=pypi_0
-python-dateutil=2.9.0.post0=pypi_0
-python-dotenv=1.0.1=pypi_0
-python-multipart=0.0.20=pypi_0
-pytz=2025.1=pypi_0
-pyyaml=6.0.2=pypi_0
-pyzmq=26.2.1=pypi_0
-readline=8.2=h5eee18b_0
-referencing=0.36.2=pypi_0
-regex=2024.11.6=pypi_0
-requests=2.32.3=pypi_0
-resampy=0.4.3=pypi_0
-rich=13.9.4=pypi_0
-rpds-py=0.22.3=pypi_0
-rsa=4.9=pypi_0
-s3transfer=0.11.2=pypi_0
-scikit-learn=1.6.1=pypi_0
-scipy=1.11.4=pypi_0
-semantic-version=2.10.0=pypi_0
-setuptools=75.8.0=py310h06a4308_0
-six=1.17.0=pypi_0
-sniffio=1.3.1=pypi_0
-soundfile=0.13.1=pypi_0
-speechrecognition=3.14.1=pypi_0
-sqlite=3.45.3=h5eee18b_0
-stack-data=0.6.3=pypi_0
-starlette=0.45.3=pypi_0
-sympy=1.13.1=pypi_0
-tensorboard=2.16.2=pypi_0
-tensorboard-data-server=0.7.2=pypi_0
-threadpoolctl=3.5.0=pypi_0
-tiktoken=0.9.0=pypi_0
-tk=8.6.14=h39e8969_0
-tokenizers=0.13.3=pypi_0
-torch=2.6.0=pypi_0
-torchaudio=2.6.0=pypi_0
-tornado=6.4.2=pypi_0
-tqdm=4.67.1=pypi_0
-traitlets=5.14.3=pypi_0
-transformers=4.27.4=pypi_0
-triton=3.2.0=pypi_0
-txtsplit=1.0.0=pypi_0
-typing-extensions=4.12.2=pypi_0
-tzdata=2025.1=pypi_0
-tzlocal=5.3=pypi_0
-unidecode=1.3.7=pypi_0
-unidic=1.1.0=pypi_0
-unidic-lite=1.0.8=pypi_0
-urllib3=2.3.0=pypi_0
-uvicorn=0.34.0=pypi_0
-wasabi=0.10.1=pypi_0
-wavmark=0.0.3=pypi_0
-wcwidth=0.2.13=pypi_0
-websockets=11.0.3=pypi_0
-werkzeug=3.1.3=pypi_0
-wheel=0.45.1=py310h06a4308_0
-whisper-timestamped=1.14.2=pypi_0
-wrapt=1.17.2=pypi_0
-xz=5.6.4=h5eee18b_1
-zlib=1.2.13=h5eee18b_1
+absl-py==2.1.0
+aiofiles==23.2.1
+altair==5.5.0
+annotated-types==0.7.0
+anyascii==0.3.2
+anyio==4.8.0
+asttokens==3.0.0
+attrs==25.1.0
+audioread==3.0.1
+av==14.1.0
+babel==2.17.0
+boto3==1.36.20
+botocore==1.36.20
+cached_path==1.6.7
+cachetools==5.5.1
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+cn2an==0.5.22
+coloredlogs==15.0.1
+comm==0.2.2
+contourpy==1.2.1
+ctranslate2==4.5.0
+cycler==0.12.1
+Cython==3.0.12
+dateparser==1.1.8
+debugpy==1.8.12
+decorator==5.1.1
+Deprecated==1.2.18
+Distance==0.1.3
+distro==1.9.0
+docopt==0.6.2
+dtw-python==1.4.4
+eng_to_ipa==0.0.2
+exceptiongroup==1.2.2
+executing==2.2.0
+fastapi==0.115.8
+faster-whisper==1.1.1
+ffmpy==0.5.0
+filelock==3.17.0
+flatbuffers==25.2.10
+fonttools==4.56.0
+fsspec==2025.2.0
+fugashi==1.3.0
+g2p-en==2.1.0
+g2pkk==0.1.2
+google-api-core==2.24.1
+google-auth==2.38.0
+google-cloud-core==2.4.1
+google-cloud-storage==2.19.0
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.67.0
+gradio==3.48.0
+gradio_client==0.6.1
+grpcio==1.70.0
+gruut==2.2.3
+gruut-ipa==0.13.0
+gruut_lang_de==2.0.1
+gruut_lang_en==2.0.1
+gruut_lang_es==2.0.1
+gruut_lang_fr==2.0.2
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+huggingface-hub==0.17.3
+humanfriendly==10.0
+idna==3.10
+importlib_resources==6.5.2
+inflect==7.0.0
+ipykernel==6.29.5
+ipython==8.32.0
+jaconv==0.4.0
+jamo==0.4.1
+jedi==0.19.2
+jieba==0.42.1
+Jinja2==3.1.5
+jiter==0.8.2
+jmespath==1.0.1
+joblib==1.4.2
+jsonlines==1.2.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.8
+langid==1.1.6
+librosa==0.9.1
+llvmlite==0.43.0
+loguru==0.7.2
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.4
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mecab-python3==1.0.9
+melotts @ git+https://github.com/myshell-ai/MeloTTS.git@209145371cff8fc3bd60d7be902ea69cbdb7965a
+more-itertools==10.6.0
+mpmath==1.3.0
+# Editable install with no version control (MyShell-OpenVoice==0.0.0)
+-e /home/VintellX/trashp/OpenVoice
+narwhals==1.26.0
+nest-asyncio==1.6.0
+networkx==2.8.8
+nltk==3.9.1
+num2words==0.5.12
+numba==0.60.0
+numpy==1.22.0
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+onnxruntime==1.20.1
+openai==1.63.0
+openai-whisper==20240930
+orjson==3.10.15
+packaging==24.2
+pandas==2.0.3
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.4.0
+plac==1.4.3
+platformdirs==4.3.6
+pooch==1.8.2
+proces==0.1.7
+prompt_toolkit==3.0.50
+proto-plus==1.26.0
+protobuf==5.29.3
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+PyAudio==0.2.14
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydub==0.25.1
+Pygments==2.19.1
+pykakasi==2.2.1
+pyparsing==3.2.1
+pypinyin==0.50.0
+python-crfsuite==0.9.11
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.20
+pytz==2025.1
+PyYAML==6.0.2
+pyzmq==26.2.1
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+resampy==0.4.3
+rich==13.9.4
+rpds-py==0.22.3
+rsa==4.9
+s3transfer==0.11.2
+scikit-learn==1.6.1
+scipy==1.11.4
+semantic-version==2.10.0
+six==1.17.0
+sniffio==1.3.1
+soundfile==0.13.1
+SpeechRecognition==3.14.1
+stack-data==0.6.3
+starlette==0.45.3
+sympy==1.13.1
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+threadpoolctl==3.5.0
+tiktoken==0.9.0
+tokenizers==0.13.3
+torch==2.6.0
+torchaudio==2.6.0
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.27.4
+triton==3.2.0
+txtsplit==1.0.0
+typing_extensions==4.12.2
+tzdata==2025.1
+tzlocal==5.3
+Unidecode==1.3.7
+unidic==1.1.0
+unidic-lite==1.0.8
+urllib3==2.3.0
+uvicorn==0.34.0
+wasabi==0.10.1
+wavmark==0.0.3
+wcwidth==0.2.13
+websockets==11.0.3
+Werkzeug==3.1.3
+whisper-timestamped==1.14.2
+wrapt==1.17.2
